# bevy_tileset_map

./: Cargo.toml  README.md
examples/: clickable.rs  drag.rs  serialization.rs
examples/helpers/: textures.rs
src/: coord.rs  lib.rs  placement.rs  plugin.rs  serialization.rs
src/auto/: traits.rs
